[project]
name = "one-quant-sdk"
version = "0.1.0"
description = "ONE量化策略开发 SDK"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
one = "one_quant_sdk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/one_quant_sdk"]
