[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "one-quant"
version = "0.1.0"
description = "ONE量化 — 机构级智能量化交易系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "redis>=5.0.0",
    "numpy>=2.0.0",
    "sqlalchemy>=2.0.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/one_quant"]

[tool.pytest.ini_options]
testpaths = ["src/one_quant/tests", "src/one_quant/risk/tests", "src/one_quant/screener/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
